# VK-GL-CTS

./: README.md
framework/common/: tcuCommandLine.cpp
framework/delibs/decpp/: deDynamicLibrary.cpp
framework/platform/mygl/: tcuMyglPlatform.cpp  tcuMyglPlatform.hpp
framework/qphelper/: CMakeLists.txt
targets/mygl/: mygl.cmake
